<resources>
    <string name="app_name">assessment1</string>
    <string name="judul">SATUAN PANJANG</string>
    <string name="dari">Dari</string>
    <string name="masukanNilai">Masukkan nilai</string>
    <string name="pilih">Pilih</string>
    <string name="ke">Ke</string>
    <string name="tombolKonversi">Konversi</string>
    <string name="tombolReset">Reset</string>
    <string name="tidak_sama">Satuan tidak boleh sama</string>

    <string-array name="list_panjang">
        <item>km</item>
        <item>hm</item>
        <item>dam</item>
        <item>m</item>
        <item>dm</item>
        <item>cm</item>
        <item>mm</item>
    </string-array>
</resources>